# vkmerc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  merc.sln
JUNK DELETE THIS LATER/: Demo.hpp  material.h  rgraph.h  vku.h  vku_core.hpp  vku_image.hpp
base/: BaseEngine.h  CMakeLists.txt  FlyCam.cpp  FlyCam.h  Mesh.h  Shader.h  TextureCommons.cpp  TextureCommons.h  VulkanBuffer.h  VulkanCompute.cpp  VulkanCompute.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanGltf.h  VulkanImage.cpp  VulkanImage.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMesh.cpp  VulkanMesh.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniform.cpp  VulkanUniform.h  vku.h
base/imgui/: VulkanImguiInstance.hpp  imgui_impl_glfw.cpp
base/pbr/: CubemapFiltering.hpp  PbrMaterial.cpp  PbrMaterial.h  Ue4BrdfLut.hpp  VulkanGltfModel.hpp  VulkanObjModel.cpp  VulkanObjModel.h
base/rendergraph/: RenderGraph.cpp  RenderGraph.h
base/scene/: Object.cpp  Object.h  Scene.cpp  Scene.h  Skybox.hpp
base/shader/: ShaderCache.cpp  ShaderCache.h  ShaderModule.cpp  (+5 more)
examples/: BloomDemo.cpp  CMakeLists.txt  CascadedShadowmapDemo.cpp  EmptyDemo.cpp  HelmetDemo.cpp  ImguiDemo.cpp  KhrRaytraceDemo.cpp  MultisampleBlitDemo.cpp  SSAODemo.cpp  vkmerc.cpp
examples/res/demo/: stand.mtl
examples/res/models/: city.mtl  stand.mtl
examples/res/shaders/blit/: blit.frag  blit.vert
examples/res/shaders/bloom/: blur.frag  highpass.frag  merge.frag
examples/res/shaders/blurX/: blurX.frag
examples/res/shaders/box/: box.frag.spv  box.vert.spv
examples/res/shaders/cubemapgen/: genbrdflut.frag.spv  irradiancecube.frag.spv
examples/res/shaders/misc/: aabb_debugger.vert  cascade_debugger.frag  frustum_debugger.frag  frustum_debugger.vert  shadowpass_debug_blit.frag
examples/res/shaders/pbr/: cascade.glsl  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbr_gbuf.frag  pbr_light.frag  pbr_light.vert  pbr_merge.frag  pbr_textureless.frag
examples/res/shaders/pbr_gen/: filtercube.vert  filtercube.vert.spv  genbrdflut.vert.spv  prefilterenvmap.frag.spv
examples/res/shaders/post/: post.frag.spv
examples/res/shaders/shadowpass/: cascade0.vert  cascade1.vert  shadowpass.vert
examples/res/shaders/skybox/: skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
examples/res/shaders/ssao/: ssao.frag  ssao_blur.frag
merc/: Bvk.hpp  Demo.hpp  FlyCam.cpp  FlyCam.h  Main.cpp  NewDemo.hpp  Vku.hpp  VulkanDemo.cpp  VulkanDemo.hpp  blit.frag  compile_shaders.bat  control.spv  control.tesc  cubemapgen.hpp  eval.spv  eval.tese  frag.spv  frag_blit.spv  frag_skybox.spv  gltfload.h  material.h  merc.vcxproj  merc.vcxproj.filters  rgraph.h  scene.blend  scene.blend1  scene.mtl  sgraph.h  shader.frag  shader.vert  shadercomp.h  shadow.vert  skybox.frag  skybox.spv  skybox.vert  test.vert  test_frag.spv  test_vert.spv  ue4_brdf_table.hpp  vert.spv  (+6 more)
(+48 files in other folders)
